force-app/main/default/objects/Invoice__c/fields/Payments_Credits__c.field-meta.xml
<CustomField>
    <fullName>Payments_Credits__c</fullName>
    <formula>Total_Credits__c +  Payment_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payments + Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>