force-app/main/default/objects/Invoice__c/fields/PDF_Bill_To_Attention__c.field-meta.xml
<CustomField>
    <fullName>PDF_Bill_To_Attention__c</fullName>
    <formula>IF(ISBLANK(Bill_To_Attention__c),
Bill_To_Attention_Lookup__r.FirstName &amp; &quot; &quot; &amp;  Bill_To_Attention_Lookup__r.LastName ,
Bill_To_Attention__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PDF Bill To Attention</label>
    <type>Text</type>
</CustomField>