force-app/main/default/objects/Invoice__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <formula>ATI_Job__r.Project_Manager_FirstName__c + &quot; &quot; + ATI_Job__r.Project_Manager_LastName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Director</label>
    <type>Text</type>
</CustomField>