force-app/main/default/objects/Invoice__c/fields/Project_Manager_obsolete__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_obsolete__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager (Obsolete)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Invoices1</relationshipName>
    <type>Lookup</type>
</CustomField>