force-app/main/default/objects/Invoice__c/fields/Project_Site_City_State__c.field-meta.xml
<CustomField>
    <fullName>Project_Site_City_State__c</fullName>
    <formula>ATI_Job__r.Project_Site_City__c &amp; &quot;, &quot; &amp; ATI_Job__r.Project_Site_State__c &amp; &quot; &quot; &amp; ATI_Job__r.Project_Site_Zipcode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Site City/State</label>
    <type>Text</type>
</CustomField>