force-app/main/default/objects/Invoice__c/fields/Project_Site_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Project_Site_Street_Address__c</fullName>
    <formula>ATI_Job__r.Project_Site_Address__c &amp; &quot; &quot; &amp; ATI_Job__r.Project_Site_Address_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Site Street Address</label>
    <type>Text</type>
</CustomField>