force-app/main/default/objects/Invoice__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName>
    <formula>IF( 
NOT(ISBLANK(Reference_Number_New__c)), 
Reference_Number_New__c, 
IF( 
NOT(ISBLANK(ATI_Job__r.Claim__c)), 
ATI_Job__r.Claim__c, 
IF( 
NOT(ISBLANK(ATI_Job__r.Policy__c)), 
ATI_Job__r.Policy__c, 
IF( 
NOT(ISBLANK(ATI_Job__r.Cont_P_O_Client_Job__c)), 
ATI_Job__r.Cont_P_O_Client_Job__c, 
&quot;&quot; ))))</formula>
    <label>Reference Number</label>
    <type>Text</type>
</CustomField>