force-app/main/default/objects/Invoice__c/fields/Reference_Number_New__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number_New__c</fullName>
    <description>This will be on the edit page and re-writable field for accounting to list the reference number.</description>
    <inlineHelpText>List the reference number if it is separate from the job.</inlineHelpText>
    <label>Reference Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>