force-app/main/default/objects/Invoice__c/fields/Requires_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Requires_Waiver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to indicate a waiver should be created by the collector.</description>
    <label>Requires Waiver</label>
    <type>Checkbox</type>
</CustomField>