force-app/main/default/objects/Invoice__c/fields/retainage_amount__c.field-meta.xml
<CustomField>
    <fullName>retainage_amount__c</fullName>
    <formula>Retainage_Held_percent__c *  Total_Costs_Per_Contract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>retainage amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>