force-app/main/default/objects/Invoice__c/fields/Retainage_Held__c.field-meta.xml
<CustomField>
    <fullName>Retainage_Held__c</fullName>
    <label>Retainage Held ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>