force-app/main/default/objects/Invoice__c/fields/Retainage_Held_percent__c.field-meta.xml
<CustomField>
    <fullName>Retainage_Held_percent__c</fullName>
    <label>Retainage Held</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>