force-app/main/default/objects/Invoice__c/fields/Scope_sent_approved_by_adjuster__c.field-meta.xml
<CustomField>
    <fullName>Scope_sent_approved_by_adjuster__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scope sent/approved by adjuster</label>
    <type>Checkbox</type>
</CustomField>