force-app/main/default/objects/Invoice__c/fields/Send_authorization_with_invoice__c.field-meta.xml
<CustomField>
    <fullName>Send_authorization_with_invoice__c</fullName>
    <description>PD needs to indicate whether to send out scope with the invoice. Missing value will indicates to review the information.</description>
    <label>Send authorization with invoice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>