force-app/main/default/objects/Invoice__c/fields/Send_invoice_to_customer_insurance__c.field-meta.xml
<CustomField>
    <fullName>Send_invoice_to_customer_insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send invoice to customer/insurance</label>
    <type>Checkbox</type>
</CustomField>