force-app/main/default/objects/Invoice__c/fields/Send_To_Timberline__c.field-meta.xml
<CustomField>
    <fullName>Send_To_Timberline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Timberline</label>
    <type>Checkbox</type>
</CustomField>