force-app/main/default/objects/Invoice__c/fields/Split_Percent__c.field-meta.xml
<CustomField>
    <fullName>Split_Percent__c</fullName>
    <formula>IF( AND( (AE_1_Bonus__c != &apos;&apos;),(AE_2_Bonus__c != &apos;&apos;)), 
	50, 
	IF( 
		OR(
			AND((AE_1_Bonus__c == &apos;&apos; ), (AE_2_Bonus__c != &apos;&apos;)), 
			AND((AE_1_Bonus__c != &apos;&apos;), (AE_2_Bonus__c == &apos;&apos;))), 
	100, 
	0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Split Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>