force-app/main/default/objects/Invoice__c/fields/Submitted_for_Approval_By__c.field-meta.xml
<CustomField>
    <fullName>Submitted_for_Approval_By__c</fullName>
    <description>Field to capture the user that submitted a job for approval, populated by Invoice Approval Process field update</description>
    <label>Submitted for Approval By</label>
    <length>30</length>
    <type>Text</type>
</CustomField>