force-app/main/default/objects/Invoice__c/fields/Superintedent__c.field-meta.xml
<CustomField>
    <fullName>Superintedent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Superintendent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>