force-app/main/default/objects/Invoice__c/fields/Tax1Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax1Rate__c</fullName>
    <label>Tax 1 Rate</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>