force-app/main/default/objects/Invoice__c/fields/Tax3Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax3Rate__c</fullName>
    <label>Tax 3 Rate</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>