force-app/main/default/objects/Invoice__c/fields/Tax6Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax6Rate__c</fullName>
    <label>Tax 6 Rate</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>