force-app/main/default/objects/Invoice__c/fields/Tax_Group__c.field-meta.xml
<CustomField>
    <fullName>Tax_Group__c</fullName>
    <label>Tax Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>