force-app/main/default/objects/Invoice__c/fields/Tax_Group_Rate__c.field-meta.xml
<CustomField>
    <fullName>Tax_Group_Rate__c</fullName>
    <formula>Bill_to_Tax_Group__r.Tax_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Group Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>