force-app/main/default/objects/Invoice__c/fields/Taxable_amount__c.field-meta.xml
<CustomField>
    <fullName>Taxable_amount__c</fullName>
    <label>Total Taxable Costs</label>
    <summarizedField>Invoice_Line_Item__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line_Item__c.Taxable__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Invoice_Line_Item__c.IsCredit__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>