force-app/main/default/objects/Invoice__c/fields/TaxGroup1__c.field-meta.xml
<CustomField>
    <fullName>TaxGroup1__c</fullName>
    <label>Tax Group 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>