force-app/main/default/objects/Invoice__c/fields/TaxGroup2__c.field-meta.xml
<CustomField>
    <fullName>TaxGroup2__c</fullName>
    <label>Tax Group 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>