force-app/main/default/objects/Invoice__c/fields/TaxGroup3__c.field-meta.xml
<CustomField>
    <fullName>TaxGroup3__c</fullName>
    <label>Tax Group 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>