force-app/main/default/objects/Invoice__c/fields/Test_lookup__c.field-meta.xml
<CustomField>
    <fullName>Test_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices (Test lookup)</relationshipLabel>
    <relationshipName>Invoices2</relationshipName>
    <type>Lookup</type>
</CustomField>