force-app/main/default/objects/Invoice__c/fields/Timberline_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Timberline_Customer_Number__c</fullName>
    <formula>Bill_To__r.Timberline_Customer_Number__c</formula>
    <inlineHelpText>Bill to Account Customer Number</inlineHelpText>
    <label>Timberline Customer Number</label>
    <type>Text</type>
</CustomField>