force-app/main/default/objects/Invoice__c/fields/Total_Costs_Per_Contract__c.field-meta.xml
<CustomField>
    <fullName>Total_Costs_Per_Contract__c</fullName>
    <label>Total Costs Per Contract</label>
    <summarizedField>Invoice_Line_Item__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line_Item__c.IsCredit__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>