force-app/main/default/objects/Invoice__c/fields/Work_authorization_sent_to_adjuster__c.field-meta.xml
<CustomField>
    <fullName>Work_authorization_sent_to_adjuster__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Work authorization sent to adjuster</label>
    <type>Checkbox</type>
</CustomField>