force-app/main/default/objects/Invoice__c/fields/X18_digit_record_ID__c.field-meta.xml
<CustomField>
    <fullName>X18_digit_record_ID__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <label>18-digit record ID</label>
    <type>Text</type>
</CustomField>