force-app/main/default/objects/Invoice__c/recordTypes/Final_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Final_Invoice</fullName>
    <active>true</active>
    <label>Approved Invoice</label>
</RecordType>