force-app/main/default/objects/Invoice__c/validationRules/Bill_To_Attention_Lookup_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Bill_To_Attention_Lookup_Email</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Bill_To_Attention_Lookup__r.Email),
 ISPICKVAL(Delivery_Method__c,&quot;Email&quot;))</errorConditionFormula>
    <errorMessage>Please populate the email address on the Bill To Attention Lookup contact record in order to choose Delivery Method of &apos;Email.&apos;</errorMessage>
</ValidationRule>