force-app/main/default/objects/Invoice__c/validationRules/Cannot_Modify_Final_Invoice.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Modify_Final_Invoice</fullName>
    <active>false</active>
    <description>Prevents users from editing invoices marked as &quot;Final.&quot;  This validation rule can be bypassed by users with appropriately configured &quot;Invoice Settings&quot; custom settings.</description>
    <errorConditionFormula>AND(
    NOT($Setup.InvoiceSettings__c.Can_Modify_Final_Invoices__c),
    NOT(ISNEW()),
    PRIORVALUE(Is_Final__c) == True )</errorConditionFormula>
    <errorMessage>This invoice has been marked as &apos;Final&apos; and cannot be modified</errorMessage>
</ValidationRule>