force-app/main/default/objects/Invoice__c/validationRules/Cannot_Syncrhonize_Dummy_Invoices.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Syncrhonize_Dummy_Invoices</fullName>
    <active>true</active>
    <description>Prevents a record from synchronizing with Timberline if it is flagged as a Dummy Invoice</description>
    <errorConditionFormula>Is_Dummy_Invoice__c &amp;&amp; Send_To_Timberline__c</errorConditionFormula>
    <errorMessage>Dummy Invoices cannot be sent to Timberline</errorMessage>
</ValidationRule>