force-app/main/default/objects/Invoice__c/validationRules/Invoices_only_editable_while_In_Process.validationRule-meta.xml
<ValidationRule>
    <fullName>Invoices_only_editable_while_In_Process</fullName>
    <active>true</active>
    <description>Prevents users (except sys-admin/accounting profiles) from editing invoices that are marked Ready for Billing, Final, or Pending. Also prevents Collections from revising invoices unless they have been synced to Timberline.</description>
    <errorConditionFormula>AND( 

NOT(ISCHANGED(AE_1_Bonus__c)),
NOT(ISCHANGED(AE_2_Bonus__c)),

OR(
NOT(ISPICKVAL(PRIORVALUE(Status__c), &apos;In Process&apos;)), NOT(ISPICKVAL(Status__c, &apos;In Process&apos;)) 
),

NOT(AND(ISPICKVAL(PRIORVALUE(Status__c), &apos;In Process&apos;),ISPICKVAL(Status__c, &apos;Ready for Billing&apos;))),

NOT($Profile.Name = &quot;System Administrator&quot;), 
NOT($Profile.Name = &quot;Accounting&quot;)

)</errorConditionFormula>
    <errorMessage>Invoices can only be edited while they are &apos;In Process&apos;. Please contact accounting with any questions.</errorMessage>
</ValidationRule>