force-app/main/default/objects/Invoice__c/validationRules/Only_Accounting_can_make_status_Final.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Accounting_can_make_status_Final</fullName>
    <active>true</active>
    <description>Only accounting and system admins can mark invoices as final or pending</description>
    <errorConditionFormula>(isnew() || ISCHANGED(Status__c)) &amp;&amp; (ISPICKVAL(Status__c, &quot;Final&quot;) || ISPICKVAL(Status__c,&quot;Pending&quot;)) &amp;&amp; ($Profile.Name &lt;&gt; &quot;Accounting&quot; &amp;&amp; $Profile.Name &lt;&gt; &quot;System Administrator&quot;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Only accounting can change invoice status to Final.</errorMessage>
</ValidationRule>