force-app/main/default/objects/Invoice__c/validationRules/Retainage_Held_percent_Is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Retainage_Held_percent_Is_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
Send_To_Timberline__c = True, 
OR(
Retainage_Held_percent__c = null,
Job__c = null,
00N70000002o9ru.00N70000002oGRV  = null
)
)</errorConditionFormula>
    <errorMessage>The Retainage Held Percent cannot be empty.</errorMessage>
</ValidationRule>