force-app/main/default/objects/Invoice__c/listViews/All_Pending_Invoices.listView-meta.xml
<ListView>
    <fullName>All_Pending_Invoices</fullName>
    <columns>NAME</columns>
    <columns>ATI_Job__c</columns>
    <columns>Office__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Total_Costs_Per_Contract__c</columns>
    <columns>Net_Due__c</columns>
    <columns>Bill_To__c</columns>
    <columns>Timberline_Customer_Number__c</columns>
    <columns>Bill_to_Tax_Group__c</columns>
    <columns>Send_To_Timberline__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Last_Successful_Timberline_Sync__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Is_Dummy_Invoice__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>In Process</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Invoice__c.Final_Invoice</value>
    </filters>
    <label>All Pending Invoices (Not In Process)</label>
    <sharedTo>
        <group>Billing</group>
    </sharedTo>
</ListView>