force-app/main/default/objects/Invoice__c/listViews/All_Pro_Forma_Invoices.listView-meta.xml
<ListView>
    <fullName>All_Pro_Forma_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Office__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Net_Due__c</columns>
    <columns>Last_Successful_Timberline_Sync__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Dummy_Invoice__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Pro Forma Invoices</label>
    <sharedTo>
        <group>Billing</group>
    </sharedTo>
</ListView>