force-app/main/default/objects/Invoice__c/listViews/Finalized_Invoices_ready_for_Sync.listView-meta.xml
<ListView>
    <fullName>Finalized_Invoices_ready_for_Sync</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Timberline_Customer_Number__c</columns>
    <columns>Bill_to_Tax_Group__c</columns>
    <columns>Send_To_Timberline__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Net_Due__c</columns>
    <columns>Total_Costs_Per_Contract__c</columns>
    <columns>Last_Successful_Timberline_Sync__c</columns>
    <columns>Bill_To__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>MTD_Work_Billed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Final__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Last_Successful_Timberline_Sync__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Is_Dummy_Invoice__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Invoice__c.Final_Invoice</value>
    </filters>
    <label>Finalized Invoices ready for Sync</label>
    <sharedTo>
        <group>Billing</group>
    </sharedTo>
</ListView>