force-app/main/default/objects/Invoice__c/listViews/Invoices_awaiting_approval.listView-meta.xml
<ListView>
    <fullName>Invoices_awaiting_approval</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Office__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Net_Due__c</columns>
    <columns>Bill_To__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Submitted_for_Approval_By__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Approved_By__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>01270000000UPGE</value>
    </filters>
    <label>Invoices awaiting approval</label>
    <sharedTo>
        <group>Billing</group>
    </sharedTo>
</ListView>