force-app/main/default/objects/Invoice__c/listViews/My_Finalized_Invoices_ready_for_Sync.listView-meta.xml
<ListView>
    <fullName>My_Finalized_Invoices_ready_for_Sync</fullName>
    <columns>NAME</columns>
    <columns>ATI_Job__c</columns>
    <columns>Timberline_Customer_Number__c</columns>
    <columns>Bill_to_Tax_Group__c</columns>
    <columns>Send_To_Timberline__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Net_Due__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Final</value>
    </filters>
    <filters>
        <field>Last_Successful_Timberline_Sync__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Is_Dummy_Invoice__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Finalized_By_is_current_user__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Invoice__c.Final_Invoice</value>
    </filters>
    <label>My Finalized Invoices ready for Sync</label>
    <sharedTo>
        <group>Billing</group>
    </sharedTo>
</ListView>