force-app/main/default/objects/Invoice__c/listViews/My_In_Process_Invoices.listView-meta.xml
<ListView>
    <fullName>My_In_Process_Invoices</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Bill_To__c</columns>
    <columns>Total_Costs_Per_Contract__c</columns>
    <columns>Net_Due__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoice_creator_is_current_user__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Invoice_PD_on_job_is_current_user__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Process</value>
    </filters>
    <label>My In Process Invoices</label>
</ListView>