force-app/main/default/objects/Invoice__c/listViews/My_Invoices_Last_90_Days.listView-meta.xml
<ListView>
    <fullName>My_Invoices_Last_90_Days</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Bill_To__c</columns>
    <columns>Total_Costs_Per_Contract__c</columns>
    <columns>Net_Due__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoice_creator_is_current_user__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Invoice_PD_on_job_is_current_user__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Due_Date__c</field>
        <operation>equals</operation>
        <value>LAST_90_DAYS</value>
    </filters>
    <label>My Invoices - Last 90 Days (PDs/Admins)</label>
</ListView>